samples/_failures_safe/1761629659_7e1db0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d66ca57.c: In function ‘main’:
./samples/SAFE/__tmp_3d66ca57.c:177:13: error: expected declaration or statement at end of input
  177 |             }
      |             ^
./samples/SAFE/__tmp_3d66ca57.c:177:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3d66ca57.c:177:13: error: expected declaration or statement at end of input
